[package]
name = "fakesshd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
russh = "0.49.1"
russh-keys = "0.49.1"
ssh-key = { version = "0.6.7", features = ["rand_core"] }
tokio = { version = "1.42.0", features = ["full"] }
