[package]
name = "fakesshd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.22"
murmur3 = "0.5.2"
#russh = { git = "https://github.com/Eugeny/russh.git" }
russh = { path = "/Users/pjhades/code/russh/russh" }
russh-keys = { git = "https://github.com/Eugeny/russh.git" }
ssh-key = { version = "0.6.7", features = ["rand_core"] }
tokio = { version = "1.42.0", features = ["full"] }
